--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "jest"
   },
   "repository": {
@@ -17,7 +19,15 @@
   },
   "homepage": "https://github.com/starkovs/STIN_2023#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "jest": "^29.5.0"
+    "helmet-csp": "^3.4.0",
+    "http": "^0.0.1-security",
+    "jest": "^29.5.0",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.21",
+    "path": "^0.12.7"
   }
 }
