--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "stin_2023",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/starkovs/STIN_2023#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -26,8 +27,11 @@
     "helmet-csp": "^3.4.0",
     "http": "^0.0.1-security",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^13.9.0"
   }
 }
