--- a/package.json
+++ b/package.json
@@ -20,16 +20,25 @@
   "homepage": "https://github.com/starkovs/STIN_2023#readme",
   "dependencies": {
     "alert": "^5.1.4",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
+    "csv-parse": "^5.3.9",
+    "date-fns": "^2.30.0",
+    "date-holidays": "^3.19.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet-csp": "^3.4.0",
+    "holidayapi": "^6.0.1",
     "http": "^0.0.1-security",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
+    "node-holidayapi": "^1.0.3",
+    "node-holidays": "^1.1.4",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
