--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest --coverage --forceExit"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "alert": "^5.1.4",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.7",
     "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "csv-parse": "^5.3.9",
@@ -34,7 +35,9 @@
     "holidayapi": "^6.0.1",
     "http": "^0.0.1-security",
     "jest": "^29.5.0",
+    "jest-mock": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "node-holidayapi": "^1.0.3",
@@ -43,6 +46,7 @@
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
     "popups": "^1.1.3",
+    "supertest": "^6.3.3",
     "validator": "^13.9.0"
   }
 }
