Add tets coverage to pipeline

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "jest --coverage --forceExit"
+    "test": "jest --forceExit",
+    "coverage": "jest --coverage --forceExit"
   },
   "repository": {
     "type": "git",
