--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test and Coverage
 
 on:
   push:
-    branches: [main]
+    branches: [ '*' ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   test:
@@ -23,8 +23,3 @@ jobs:
 
     - name: Run tests and coverage
       run: npm run test -- --coverage
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1.1.0
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
