--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,33 +18,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
 
-    - name: Install dependencies
-    run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run test
-    run: npm run test
+      - name: Run tests
+        run: npm run test
 
-    - name: Check if tests failed
-    run: |
-      if [ -f "test-results.xml" ]; then
-        if grep -q "failure" test-results.xml; then
-          exit 1
-        fi
-      fi
-
-    # - name: Run tests and coverage
-    #   run: npm run test -- --coverage
-      
-    # - name: Check code coverage percentage
-    #   uses: codecov/codecov-action@v1.1.0
-    #   with:
-    #     token: ${{ secrets.CODECOV_TOKEN }}
-    #     fail_ci_if_error: true
-    #     flags: unittests
+      - name: Check if tests failed
+        run: |
+          if [ -f "test-results.xml" ]; then
+            if grep -q "failure" test-results.xml; then
+              exit 1
+            fi
+          fi
