--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "jest --forceExit",
-    "coverage": "jest --coverage --forceExit"
+    "coverage": "jest --coverage --coverageThreshold --forceExit "
   },
   "repository": {
     "type": "git",
