--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,17 +27,14 @@ jobs:
         run: npm install
       - name: Run tests
         run: npm test
-      - name: Run tests and check coverage
+      - name: Check test coverage
         run: |
-          coverage=$(npx jest --showConfig \
-            | grep coverageThreshold \
-            | awk '{print $3}' \
-            | tr -d ',' \
-            | sed 's/"//g')
+          coverage=$(npx jest --showConfig | grep coverageThreshold | awk '{print $3}' | tr -d ',' | sed 's/"//g')
           threshold=50
-          if (( $(echo "$coverage < $threshold" | bc -l) )); then
+          if (( $(echo "$coverage" | tr -d % | sed 's/\..*$//g' ) < $threshold )); then
             echo "Test coverage is less than $threshold%. Aborting merge."
             exit 1
           fi
+        shell: /usr/bin/bash -e {0}
 
 
