--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet-csp": "^3.4.0",
     "holidayapi": "^6.0.1",
     "http": "^0.0.1-security",
